# tlaplus

./: Cargo.toml  README.md  justfile
crates/tlaplus-cli/: Cargo.toml
crates/tlaplus-cli/src/: config.rs  main.rs  manifest.rs  translate.rs  update.rs
crates/tlaplus-cli/src/cmd/: check.rs  home.rs  sany.rs  tex.rs  translate.rs  update.rs
crates/tlaplus-cli/src/cmds/: update.rs
src/: config.rs  main.rs
