[package]
name = "tlaplus-cli"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56" }
camino = "1.0.7"
futures-util = "0.3.21"
indicatif = "0.16.2"
octocrab = { version = "0.15.4", features = ["rustls"] }
once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["rustls-tls", "stream"], default-features = false }
semver = { version = "1.0.6", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["rt", "macros"] }
toml = "0.5.8"

[profile.release]
strip = true
