[package]
name = "tlaplus-cli"
version = "0.1.0-dev"
edition = "2021"

[[bin]]
name = "tlaplus"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "3.1.6", features = ["derive"] }
once_cell = "1.10.0"
semver = { version = "1.0.6", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
